# rust-bot-server

./: Cargo.toml  README.md
src/: main.rs
src/utils/: embeddings.rs  envs.rs  llm.rs  mod.rs  redis.rs  server.rs  vector_store.rs
